# projetc

skytravel3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  reservations.txt  skytravel3.glade.bak  skytravel3.gladep
skytravel3/autom4te.cache/: output.1  requests  traces.0  traces.1
skytravel3/po/: Makefile  Makefile.in
skytravel3/src/: Makefile  Makefile.am  Makefile.in  afficher_plane.c  afficher_plane.h  ameni.c  ameni.h  backup.txt  bilel.c  bilel.h  callbacks.c  callbacks.h  current.txt  currentrech.txt  currentrechRetour.txt  haja  interface.c  interface.c.bak  interface.h.bak  it-tun.txt  main.c  personne.txt  personnne.txt  rech.c  rech.h  rechr.c  rechr.h  reservations.txt  reserver.c  reserver.h  skytravel3  test  tun-fr.txt  tun-it.txt  who.c  who.h
skytravel3/src/.deps/: afficher_plane.Po  ameni.Po  bilel.Po  callbacks.Po  rech.Po  rechr.Po  reserver.Po  who.Po
